# deploy_2.1_new

./: DEPLOY_GUIDE.md  DEPTH_CAMERA_SIM2SIM_GUIDE.md  MJDATA.TXT  MUJOCO_LOG.TXT  build.sh  check_wheel_fk_error.py  check_wheel_fk_error_offline.py  config.txt  deploy.md  depth_c_simulation.sh  generate_terrains.py  install_env.sh  monitor_ui.py  run_m20_simulation.sh  run_on_robot.sh  sim2sim_deploy_config.md
fft_simulation/: fft2_simulation.sh  fft_simulation.sh  sim2sim_deploy_config.md  strong2_simulation.sh  strong_ppo_base_simulation.sh
fixed_height_simulation/: README.md  fft_simulation.sh  flat_simulation.sh
logs/: standup_height_joint_data.csv
scripts/: plot_standup_csv.py
src/M20_sdk_deploy/: CMakeLists.txt  main_fft.cpp  main_fft2.cpp  main_strong2.cpp  package.xml  policy.md
src/M20_sdk_deploy/config/: mixed_terrains_history_vae_config.json  teleop_config.json
src/M20_sdk_deploy/config/terrain/: mixed_terrains_depth_camera_vae_env_cfg.py  mixed_terrains_history_vae_env_cfg.py
src/M20_sdk_deploy/include/types/: common_types.h
src/M20_sdk_deploy/include/utils/: safe_controller.hpp
src/M20_sdk_deploy/interface/robot/: robot_interface.h
src/M20_sdk_deploy/interface/robot/hardware/: m20_interface.hpp
src/M20_sdk_deploy/interface/robot/simulation/: mujoco_simulation_depth_ros2.py  mujoco_simulation_ros2.py
src/M20_sdk_deploy/interface/user_command/: fixed_direction_keyboard_interface.hpp  fixed_direction_keyboard_interface_sim.hpp  keyboard_interface.hpp  keyboard_interface_sim.hpp
src/M20_sdk_deploy/model/M20/mjcf/: M20.xml
src/M20_sdk_deploy/policy/depth_high_speed/x_rash/: policy.onnx
src/M20_sdk_deploy/policy/depth_high_speed/y_jump/: policy_jump.onnx
src/M20_sdk_deploy/policy/fixed_height_fft/: like2.onnx  policy.onnx  policy_n2.onnx  policy_self.onnx  policylikero30.onnx  policytest2.onnx  rough_test1.onnx
src/M20_sdk_deploy/policy/fixed_height_flat/: cur5_2.onnx  flat_t2.onnx  policy.onnx  policy_31.onnx  policy_air2.onnx  policy_air4.onnx  policy_ro23.onnx  policy_ro29.onnx  policyr018.onnx
src/M20_sdk_deploy/policy/high_speed/diagonal/: policy.onnx  policy_.onnx
src/M20_sdk_deploy/policy/high_speed/x_rash/: policy__.onnx
src/M20_sdk_deploy/policy/high_speed/y_rush/: policy.onnx
src/M20_sdk_deploy/policy/low_speed/: policy_init.onnx  policy_randomrough_vae_65132645.onnx  policy_stairs_vae_68132958.onnx  policy_steppingstones_vae_65125402.onnx  policy_test.onnx
src/M20_sdk_deploy/policy/strong_ppo_base/: fhb2.onnx  policy2.onnx  policy_FBH22.onnx  policy——fhb0.onnx  shv2.onnx
src/M20_sdk_deploy/policy/x_jump/: policy.onnx
src/M20_sdk_deploy/policy/x_rash/: policy.onnx  policy_back.onnx
src/M20_sdk_deploy/policy/y_jump/: policy_1.onnx
src/M20_sdk_deploy/run_policy/: m20_depth_policy_runner.hpp  m20_fft2_policy_runner.hpp  m20_fft_policy_runner.hpp  m20_fft_policy_runner.hpp.bak.orig  m20_policy_runner.hpp
src/M20_sdk_deploy/standalone_stubs/drdds/msg/: battery_data.hpp  common.hpp
src/M20_sdk_deploy/standalone_stubs/rclcpp/: rclcpp.hpp
src/M20_sdk_deploy/standalone_stubs/std_msgs/msg/: float32_multi_array.hpp
src/M20_sdk_deploy/state_machine/quadruped_wheel/: fft2_rl_control_state.hpp  fft2_state_machine.hpp  fft_rl_control_state.hpp  fft_state_machine.hpp  qw_state_machine.hpp  rl_control_state.hpp  standup_state.hpp  standup_state.hpp.bak  strong2_rl_control_state.hpp  strong2_state_machine.hpp
variable_height_simulation/: README.md  fft_simulation.sh  flat_simulation.sh
